<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_d8deed"
    tools:context=".activity.DayManageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_3162d4"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonActivityPrev"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_end_color"
                android:text="@string/arrow_back"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewActivityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Dodaj kategorię"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonActivityNext"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_end_color"
                android:text="@string/arrow_forward"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/blue_4c76d9"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="date"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDayActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="50dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="96sp" />

                <TextView
                    android:id="@+id/textViewDayActivity2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="50dp"
                    android:text=" m"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="96sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextActivityAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="#9ac4db"
                    android:ems="10"
                    android:hint="_"
                    android:inputType="number"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/meters"
                    android:textColor="@color/black" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonActivityAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="80dp"
                android:text="@string/add" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextActivitySet"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="#9ac4db"
                    android:ems="10"
                    android:hint="_"
                    android:inputType="number"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/meters"
                    android:textColor="@color/black" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonActivitySet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/set" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>